fix: add overflow

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -4,6 +4,10 @@
   margin: 0;
 }
 
+body {
+  overflow: hidden;
+}
+
 @import "../scss/mixins";
 
 @import "../scss/styles";
